...
            <EditText
                android:layout_width="248dp"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"
                android:hint="@string/DefaultUsername"
                android:ems="10"
                android:id="@+id/editUsername"
                android:background="@drawable/edittext_bg"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="0.12"
                android:padding="10dp" />

...
                android:height="50dp"
                android:textColor="#FFFFFFFF"
                android:background="#4e8f9c"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dip"
                android:text="@string/RegisterLink"
                android:textSize="17sp"
...
